cluster/default/znc/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: znc
  namespace: default
spec:
  ports:
    - protocol: TCP
      port: 6677
      targetPort: 6677
  selector:
    app: znc
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: znc
  namespace: default
spec:
  selector:
    matchLabels:
      app: znc
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: znc
    spec:
      containers:
      - image: vaskozl/znc-push:7786cc74
        imagePullPolicy: IfNotPresent
        name: znc
        ports:
        - containerPort: 6677
          name: znc
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /znc-data
          name: pv-znc
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 2000
        runAsGroup: 2000
        runAsUser: 100
      terminationGracePeriodSeconds: 30
      volumes:
      - name: pv-znc
        persistentVolumeClaim:
          claimName: znc-v0
