cluster/default/znc/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-znc
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: znc
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
